pandoc: WIP: call shell commands

--- a/pandoc/Makefile
+++ b/pandoc/Makefile
@@ -1,6 +1,11 @@
 GHC = stack ghc --
 PANDOC = pandoc
 
+SRC = SatysfiFilter.hs \
+  SatysfiFilter/Config.hs \
+  SatysfiFilter/Misc.hs \
+  SatysfiFilter/Shell.hs
+
 all: test
 test: test/test.html
 
@@ -8,8 +13,8 @@ test/test.html: test/test.md satysfiFilter
 	pandoc -f markdown -t html --filter ./satysfiFilter -o $@ $<
 	cat $@
 
-satysfiFilter: satysfiFilter.hs
-	$(GHC) --make -o $@ $^
+satysfiFilter: $(SRC)
+	$(GHC) --make -o $@ $<
 
 .PHONY: clean
 clean:
