BREAKING: USE STACK TO BUILD * `stack build` to build * change the role of this repository; distributing SatysfiFilter only

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@
 *~
 
 # compilation results
-*.hi
-*.o
-/pandoc/satysfiFilter
-/pandoc/test/test.html
-/pandoc/test/generated
+/.stack-work
+/SatysfiFilter.cabal
+/example/test.html
+/example/generated
