improve package.yaml

--- a/package.yaml
+++ b/package.yaml
@@ -2,7 +2,7 @@ name:                SatysfiFilter
 version:             0.2.0.0
 github:              "nekketsuuu/SatysfiFilter"
 license:             MIT
-author:              "Takuma Ishikawa"
+author:              "Takuma Ishikawa (@nekketsuuu)"
 maintainer:          "nekketsuuu@users.noreply.github.com"
 copyright:           "2018 Takuma Ishikawa (@nekketsuuu)"
 
