--- a/package.yaml
+++ b/package.yaml
@@ -24,7 +24,7 @@ dependencies:
 - directory >= 1.3 && < 2
 - filepath >= 1.4 && < 2
 - pandoc-types >= 1.17 && < 2
-- shelly >= 1.8 && < 2
+- shelly == 1.8.0
 - text >= 1.2 && < 2
 
 library:
